# eclipse-toml-editor

./: .gitignore  .project  README.md  TODO.md
com.amadeus.eclipse.toml_editor.feature/: .project  feature.xml
com.amadeus.eclipse.toml_editor.plugin/: .project  plugin.xml
com.amadeus.eclipse.toml_editor.plugin/src/com/amadeus/eclipse/toml_editor/plugin/: TomlAutoEditStrategy.java  TomlContentAssistProcessor.java  TomlEditorPlugin.java  TomlPresentationReconciler.java  TomlSourceViewerConfiguration.java  TomlTextEditor.java  ValidatorDocumentSetupParticipant.java
com.amadeus.eclipse.toml_editor.plugin/src/com/amadeus/eclipse/toml_editor/plugin/outline/: TomlContentOutlineDocumentParser.java  TomlContentOutlinePage.java  TomlContentOutlineProvider.java  TomlLabelProvider.java
com.amadeus.eclipse.toml_editor.plugin/src/com/amadeus/eclipse/toml_editor/plugin/rules/: AbsLineRule.java  AnyNumberRule.java  KeyValuePairRule.java  KeywordRule.java  NumberTimestampRule.java  SectionNameRule.java  StartEndMultilineRule.java  StartEndRule.java  TimestampRule.java
com.amadeus.eclipse.toml_editor.updates/: .gitignore  .project  site.xml
docs/: toml.css
examples/: example.toml  pyproject.toml
updates/: .project  index.html  site.xml
updates/docs/: toml.css
